--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "chalk": "^4.1.0",
+    "express": "^4.17.1",
     "readline-sync": "^1.4.10"
   }
 }
